--- a/Jun_Fan_CISC_Lesson1_submission.ipynb
+++ b/Jun_Fan_CISC_Lesson1_submission.ipynb
@@ -16,6 +16,18 @@
     }
    ],
    "source": [
+    "#(a) High-level language vs. Machine language\n",
+    "# High-level language is closer to human languages, easy to understand, thus, High-level language less effective than Machine language\n",
+    "\n",
+    "#(b) What are some of the advantages and disadvantages of a compiler which you can think of ?\n",
+    "# advantages: run fast when reused\n",
+    "# disadvantages: compile take times when first time.\n",
+    "\n",
+    "#(c) What are some of the advantages and disadvantages of an interpreter which you can think of ?\n",
+    "# advantages: Safe\n",
+    "# disadvantages: different encoding method can easily be messed up  \n",
+    "\n",
+    "\n",
     "#in this statements, input data type is different from the second one, \n",
     "#this one is Integer, so the print statement computate\n",
     "#them as Integer, which is 10+3.\n",
